[package]
name = "embassy-rp-pico"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { version = "0.6.0", features = ["defmt"] }
embassy-sync = { version = "0.8", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = [
  "platform-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.10.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp235xb",
  "binary-info",
] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }
embassy-usb-logger = { version = "0.6.0" }
embassy-futures = { version = "0.1.2" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
usbd-hid = "0.8.1"

log = "0.4"
pio-proc = "0.3"
pio = "0.3"
portable-atomic = { version = "1.5", features = ["critical-section"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

static_cell = "2.1"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "7b1368f" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "7b1368f" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "7b1368f" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "7b1368f" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "7b1368f" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "7b1368f" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "7b1368f" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "7b1368f" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "7b1368f" }
